# zwirn-loom

./: Makefile  README.md  config.yaml  main.js  package.json  zwirn-loom.cabal
.github/workflows/: pack-linux.yml  pack-mac.yml  pack-windows.yml
app/: Main.hs
app/Editor/: Backend.hs  Config.hs  Frontend.hs  Highlight.hs  Setup.hs  UI.hs
static/: zwirn.html  zwirn.js
static/codemirror/: codemirror.css
static/css/: zwirn.css
